--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <mockito.version>4.11.0</mockito.version>
         <portlet.mvc.util.version>1.1.3</portlet.mvc.util.version>
         <uportal-libs.version>5.17.0</uportal-libs.version>
+        <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -470,6 +471,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-archiver</artifactId>
+                        <version>4.2.7</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <attachClasses>true</attachClasses>
                     <warName>${project.artifactId}</warName>
@@ -541,6 +550,14 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
+                        <version>${maven-war-plugin.version}</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.codehaus.plexus</groupId>
+                                <artifactId>plexus-archiver</artifactId>
+                                <version>4.2.7</version>
+                            </dependency>
+                        </dependencies>
                         <configuration>
                             <classifier>localdev</classifier>
                             <warName>${project.artifactId}</warName>
